--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     ],
     "linux": {
       "target": [
-        "deb"
+        "deb",
+        "AppImage"
       ],
       "category": "Office",
       "maintainer": "Oticon Clinician <mksv@hearinglife.com>",
@@ -36,6 +37,11 @@
       "target": "nsis",
       "icon": "build/icon.ico",
       "executableName": "Oticon-Comparator"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "build/icon.icns",
+      "category": "public.app-category.medical"
     },
     "directories": {
       "buildResources": "build",
